# MongoBackuper

./: Cargo.toml  LICENSE  README.md  build.rs
bins/: installer_manifest.xml
src/: backuper.rs  exts.rs  logger.rs  main.rs
src/core/: linux.rs  windows.rs
